; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_bintime_addx.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_bintime_addx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bintime = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bintime*, i64)* @bintime_addx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bintime_addx(%struct.bintime* %0, i64 %1) #0 {
  %3 = alloca %struct.bintime*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.bintime* %0, %struct.bintime** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.bintime*, %struct.bintime** %3, align 8
  %7 = getelementptr inbounds %struct.bintime, %struct.bintime* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.bintime*, %struct.bintime** %3, align 8
  %11 = getelementptr inbounds %struct.bintime, %struct.bintime* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, %9
  store i64 %13, i64* %11, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.bintime*, %struct.bintime** %3, align 8
  %16 = getelementptr inbounds %struct.bintime, %struct.bintime* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp sgt i64 %14, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %2
  %20 = load %struct.bintime*, %struct.bintime** %3, align 8
  %21 = getelementptr inbounds %struct.bintime, %struct.bintime* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %21, align 8
  br label %24

24:                                               ; preds = %19, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
